airflow/logs/dag_id=Gold_training_Pipeline/run_id=manual__2024-10-21T070233.583628+0000/task_id=preprocess_the_extracted_data/attempt=3.log
[2024-10-21T07:02:55.161+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-21T07:02:33.583628+00:00 [queued]>
[2024-10-21T07:02:55.166+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-21T07:02:33.583628+00:00 [queued]>
[2024-10-21T07:02:55.167+0000] {taskinstance.py:2193} INFO - Starting attempt 3 of 4
[2024-10-21T07:02:55.246+0000] {taskinstance.py:2217} INFO - Executing <Task(PythonOperator): preprocess_the_extracted_data> on 2024-10-21 07:02:33.583628+00:00
[2024-10-21T07:02:55.256+0000] {standard_task_runner.py:60} INFO - Started process 561 to run task
[2024-10-21T07:02:55.258+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Gold_training_Pipeline', 'preprocess_the_extracted_data', 'manual__2024-10-21T07:02:33.583628+00:00', '--job-id', '104', '--raw', '--subdir', 'DAGS_FOLDER/gold_training_pipeline.py', '--cfg-path', '/tmp/tmpo7ebee43']
[2024-10-21T07:02:55.260+0000] {standard_task_runner.py:88} INFO - Job 104: Subtask preprocess_the_extracted_data
[2024-10-21T07:02:55.297+0000] {task_command.py:423} INFO - Running <TaskInstance: Gold_training_Pipeline.preprocess_the_extracted_data manual__2024-10-21T07:02:33.583628+00:00 [running]> on host 988c1a0779ad
[2024-10-21T07:02:55.344+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='sdeshan' AIRFLOW_CTX_DAG_ID='Gold_training_Pipeline' AIRFLOW_CTX_TASK_ID='preprocess_the_extracted_data' AIRFLOW_CTX_EXECUTION_DATE='2024-10-21T07:02:33.583628+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-21T07:02:33.583628+00:00'
[2024-10-21T07:02:55.401+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/components/gold/model_training/data_preprocessing.py", line 29, in preprocess_data
    populate_table(data_table, df)
  File "/opt/airflow/dags/components/utils/database_table_creation.py", line 51, in populate_table
    cur.executemany(query, data_tuples)
psycopg2.errors.SyntaxError: syntax error at or near ":"
LINE 1: INSERT INTO preprocesed_gold_data_tables (Unnamed: 0, date, ...
                                                         ^

[2024-10-21T07:02:55.439+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=Gold_training_Pipeline, task_id=preprocess_the_extracted_data, execution_date=20241021T070233, start_date=20241021T070255, end_date=20241021T070255
[2024-10-21T07:02:55.446+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 104 for task preprocess_the_extracted_data (syntax error at or near ":"
LINE 1: INSERT INTO preprocesed_gold_data_tables (Unnamed: 0, date, ...
                                                         ^
; 561)
[2024-10-21T07:02:55.472+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-10-21T07:02:55.487+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
